@startuml

title __CACHE's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.cache {
    class ImageCache {
      {static} - instance : ImageCache
      - cache : HashMap<String, Bitmap>
      {static} + getInstance()
      - ImageCache()
      + getImage()
      + putImage()
      + deleteImage()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.cache {
    class ObservableUserCache {
      {static} - instance : ObservableUserCache
      - databaseReference : DatabaseReference
      - valueEventListener : ValueEventListener
      - userController : UserController
      - user : User
      - database : DatabaseReference
      {static} + getInstance()
      - ObservableUserCache()
      + updateReference()
      + getBorrowedBook()
      + getOwnedBook()
      + getBorrowedBooks()
      + getOwnedBooks()
      + getProfile()
      + getChatRoomId()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.user {
      class User {
        - chatRoomList : Map<String, ChatRoomItem>
        - ownedBooks : Map<String, OwnedBook>
        - borrowedBooks : Map<String, BorrowedBook>
        - userProfile : UserProfile
        - id : String
        + User()
        + getChatRoomList()
        + getOwnedBooks()
        + getBorrowedBooks()
        + getProfile()
        + getId()
      }
    }
  }
}

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.controller {
    class UserController {
      - auth : FirebaseAuth
      - database : FirebaseDatabase
      {static} - instance : UserController
      - UserController()
      {static} + getInstance()
      + isAuthenticated()
      + authenticate()
      + deauthenticate()
      + createUser()
      + getMyId()
      - getUserEmail()
      + getUserProfile()
      + getMyProfile()
      + updateMyProfile()
    }
  }
}

note top of ObservableUserCache
  Observer Pattern
end note

ObservableUserCache -up-|> Observable
ObservableUserCache o-- "1" User
ObservableUserCache o-- "1" UserController


right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
